--- a/Pages/Data/ManualEntry.cshtml
+++ b/Pages/Data/ManualEntry.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SmartHome.Pages.Data.ManualEntryModel
+@model SmartLab.Pages.Data.ManualEntryModel
 @{
     ViewData["Title"] = "Manual Data Entry";
 }
