--- a/Pages/Measurements/ConfigureParameters.cshtml
+++ b/Pages/Measurements/ConfigureParameters.cshtml
@@ -1,5 +1,5 @@
 @page "/measurements/configure/{deviceId:guid}"
-@using SmartHome.Domains.Measurement.Models
+@using SmartLab.Domains.Measurement.Models
 @model smarthome_webserver.Pages.Measurements.ConfigureParametersModel
 @{
     ViewData["Title"] = "Configure Measurement Parameters";
