worked on sqlite implementation

--- a/Pages/Data/ManualEntry.cshtml
+++ b/Pages/Data/ManualEntry.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Dataset Date:</label>
-                <input class="form-control" type="datetime-local"  id="dataset_Date_time"  asp-for="DatasetDateTime" required/>
+                <input class="form-control" type="datetime-local"  id="dataset_Date_time"  asp-for="DatasetDateTime"/>
             </div>
             <div class="mb-3">
                 <label class="form-label">Dataset Description:</label>
